<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content -->

    <!-- Navigation Drawer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top bar: menu, title, update, last update -->
        <ImageView
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/currency_converter"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/btnMenu"
            app:layout_constraintStart_toEndOf="@id/btnMenu"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Scrollable area with RecyclerView and Add button -->
        <ScrollView
            android:id="@+id/scrollContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="120dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@id/btnCalculator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/update"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toTopOf="@+id/currencyRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/updated_time"
                    app:layout_constraintBottom_toTopOf="@+id/currencyRecyclerView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/currencyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@color/test"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/add"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollContainer" />

        <!-- Floating Calculator Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_calculate_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/navView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        app:menu="@menu/drawer_menu"/>-->

    <FrameLayout
        android:id="@+id/leftDrawerContainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <!-- Your custom layout -->
        <include
            android:id="@+id/navViewContainer"
            layout="@layout/nav_drawer" />
    </FrameLayout>

    <!-- Include the custom drawer layout -->


</androidx.drawerlayout.widget.DrawerLayout>
